@@ -13,6 +13,7 @@ Version 0.13
  Kml: Don't output kml for trips without gps co-ordinates
  Initial add of simple trip comparison tool [mpg, fuel usage]
  Sim: dlopen generator takes a sub-seed
+ Logger: Gracefully handle delayed gpsd startup
 
 Version 0.12 (released 2010-01-03)
  ftdipty: Support user-specified device and vendor ids
